ajustes para ver se da build

--- a/portifolio/app.json
+++ b/portifolio/app.json
@@ -23,16 +23,7 @@
       "favicon": ""
     },
     "plugins": [
-      "expo-router",
-      [
-        "expo-splash-screen",
-        {
-          "image": "",
-          "imageWidth": 200,
-          "resizeMode": "contain",
-          "backgroundColor": "#ffffff"
-        }
-      ]
+      "expo-router"
     ],
     "experiments": {
       "typedRoutes": true
